--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <div class="row pt-2">
     <div class="col">
       <h1 id="page-title" class="text-dark text-center">
-        Sample Calculator App for <span class="text-danger">AWS CodePipeline Assignment Step by Step</span>
+        Sample Angular App for <span class="text-danger">AWS CodePipeline Step by Step</span>
       </h1>
       <hr>
       <h2 class="text-right">
-        <span class="badge badge-info">Version: 2.0.0</span>
+        <span class="badge badge-info">Version: 4.0</span>
       </h2>
     </div>
   </div>
@@ -19,7 +19,7 @@
         Congratulations Virender! You successfully built and deployed your code.
       </p>
       <p class="lead">
-        This is a simple calculator app developed using Angular 9 and Bootstrap 4.4.1 for our build examples on <strong>AWS CodePipeline Step by Step</strong> Assignment.
+        This is a simple single-page calculator app developed using Angular 9 and Bootstrap 4.4.1 for our build examples on <strong>AWS CodePipeline Step by Step</strong> course.
       </p>
       <app-calculator></app-calculator>
     </div>
